Añadido estilos personalizados para botón y fondo de la pantalla de inicio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RetrofitAfrica</string>
+    <string name="iconContent">Icono de aplicación</string>
+
+    <string name="buttonTextInitScreen">Comenzar</string>
 </resources>
