--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,10 @@
     <!-- String pantalla glosario -->
     <string name="textTitleGlossary">Glosario de Paises</string>
 
+    <!-- String pantalla de test -->
+    <string name="textTitleSelectTest">Tests</string>
+    <string name="textSubtitleTest">Seleccione la cantidad de preguntas:</string>
+    <string name="btStartTest">Comenzar</string>
+    <string name="textNumPreguntas">Número de preguntas:</string>
+
 </resources>
