Actividad Score terminada con subida de datos a la base de datos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,11 @@
     <string name="testSubtitle">Seleccione la cantidad de preguntas:</string>
     <string name="start">Comenzar</string>
 
+    <!-- Strings pantalla de puntuación -->
+    <string name="textTitleScore">Resultados</string>
+    <string name="textNumAciertos">Número de aciertos:</string>
+    <string name="textNumFallos">Número de fallos:</string>
+    <string name="textPercentAciertos">Porcentaje de aciertos</string>
+    <string name="btVolverMenu">Volver al menú</string>
+
 </resources>
