Vista de score añadida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,7 @@
     <string name="testSubtitle">Seleccione la cantidad de preguntas:</string>
     <string name="start">Comenzar</string>
 
+    <!-- String pantalla de puntuaciones -->
+    <string name="textTitlePuntuaciones">Puntuaciones</string>
+
 </resources>
